fixed scrollbar covering topNavBar

--- a/TemTem List and Search/main.css
+++ b/TemTem List and Search/main.css
@@ -104,6 +104,7 @@
     width: 19.5%; /* Full width */
     height: 80%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
+    overflow-x: hidden;
     background-color: rgba(0,0,0,0.69); /* Black w/ opacity */
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
@@ -172,8 +173,11 @@
 {
     margin: auto;
     background: linear-gradient(90deg, rgba(47,67,78,1) 0%, rgba(65,79,86,1) 50%, rgba(47,67,78,1) 100%);
-    min-height: 85vh;
+    height: 90vh;
+    width: 100%;
     margin-top: 92px;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 .mainContent
 {
@@ -185,6 +189,7 @@
     align-items: center;
     justify-content: center;
     padding-top: 40px;
+    
 }
 .smallImg
 {
